<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical" android:id="@+id/addStudentBG">
    <TextView android:id="@+id/textView1" android:text="@string/addstudent" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
    <TextView android:id="@+id/textView2" android:text="@string/fName" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/blank" android:id="@+id/edFName"></EditText>
    <TextView android:id="@+id/textView3" android:text="@string/lName" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/blank" android:id="@+id/edLName"></EditText>
    <TextView android:id="@+id/textView5" android:text="@string/blank" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
    <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="center">
        <Button android:text="@string/submit" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/btn_addStudent"></Button>
    </LinearLayout>
</LinearLayout>
