<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical" android:layout_gravity="center|center_vertical" android:id="@+id/connectBG">
    <TextView android:text="@string/ip" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:gravity="center"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/blank" android:id="@+id/edIP"></EditText>
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:gravity="center" android:orientation="vertical">
        <TextView android:text="@string/blank" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content"></TextView>
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/connect" android:id="@+id/btnConnect"></Button>
    </LinearLayout>
</LinearLayout>
